@@ -26,11 +26,15 @@ kotlin {
         }
 
         val desktopTest by getting {
-            dependencies {
-                implementation("org.junit.jupiter:junit-jupiter:5.9.2")
-                implementation("io.mockk:mockk:1.13.8")
-                implementation("io.mockk:mockk-agent-jvm:1.13.8")
-            }
+
+                dependencies {
+                    implementation(libs.junit.junit)
+                    implementation(libs.junit.jupiter)
+                    implementation(libs.mockk.jvm)
+                    implementation(libs.slf4j.simple)
+                    implementation(libs.junit.jupiter.engine)
+                }
+
         }
 
         commonMain.dependencies {
@@ -51,15 +55,39 @@ kotlin {
             implementation(libs.voyager.screenModel)
             implementation(libs.voyager.transitions)
             implementation(libs.voyager.bottomSheetNavigator)
+
+
+            implementation(libs.compose.material)
+            implementation(compose.components.resources)
+
+
+
         }
 
         desktopMain.dependencies {
             implementation(compose.desktop.currentOs)
             implementation(libs.kotlinx.coroutines.swing)
+
+            implementation(libs.mysql.connector.java)
+            implementation(libs.exposed.core)
+            implementation(libs.exposed.dao)
+            implementation(libs.exposed.jdbc)
+            implementation("com.itextpdf:itextpdf:5.5.13.3")
+            implementation ("com.google.zxing:core:3.4.1")
+            implementation ("com.google.zxing:javase:3.4.1")
+            implementation(compose.desktop.currentOs)
+            implementation(libs.junit.junit)
+            implementation(libs.junit.jupiter)
+            implementation(kotlin("test"))
+            implementation("org.junit.jupiter:junit-jupiter-api:5.10.2")
+            implementation("org.junit.jupiter:junit-jupiter-engine:5.10.2")
+            implementation("io.mockk:mockk:1.13.10") // versión estable para JVM
+            implementation("org.slf4j:slf4j-simple:2.0.9")
+
+
         }
     }
 }
-
 
 compose.desktop {
     application {
@@ -73,8 +101,12 @@ compose.desktop {
 }
 
 tasks.withType<Test> {
-    useJUnitPlatform() // Usar JUnit 5
+
+
+    useJUnitPlatform() // Esto es necesario para usar JUnit 5
+    jvmArgs("-XX:+EnableDynamicAgentLoading")
     testLogging {
         events("passed", "skipped", "failed")
     }
 }
+
